Maven module refactoring - wip